<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView.PrimaryColor.Header"
                    android:text="@string/text_heading_password_reset" />

                <TextView
                    style="@style/TextView.SubHeader"
                    android:text="@string/text_sub_heading_password_reset" />

                <com.firstaid.util.customview.MaterialEditText
                    android:id="@+id/etEmail"
                    style="@style/FloatingLabelEditText"
                    app:met_floatingLabelAnimating="true"
                    android:hint="@string/text_your_email_address"
                    android:inputType="textEmailAddress|textNoSuggestions" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSendNow"
                style="@style/Button.Primary"
                android:layout_marginTop="@dimen/dimen_14dp"
                android:text="@string/text_send_now" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>