<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <ImageView
        android:id="@+id/ivSplashIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:src="@drawable/ic_first_aid_kit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textSize="@dimen/font_44sp"
        android:layout_below="@+id/ivSplashIcon"
        android:text="@string/app_title"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_54dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_login"
            android:background="@drawable/button_selector_primary"
            android:textColor="@color/color_ffffff"
            android:layout_marginEnd="@dimen/dimen_10dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_register"
            android:background="@drawable/button_selector_primary"
            android:textColor="@color/color_ffffff"
            android:layout_marginStart="@dimen/dimen_10dp"/>
    </LinearLayout>


</RelativeLayout>